[project]
name = "ro-support-agent"
version = "0.1.0"
description = "AI agent for RO support using OpenEnv"
authors = [
    { name = "Nihal Chaudhary" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
start = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
