[project]
name = "ro-support-agent"
version = "0.1.0"
description = "AI agent for RO support using OpenEnv"
authors = [
    { name = "Nihal Chaudhary" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

# ✅ IMPORTANT: key MUST be "server"
[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
